fixed chrome layout bug

--- a/stylesheets/he-core.css
+++ b/stylesheets/he-core.css
@@ -3405,7 +3405,7 @@ div.header-spacer-default {
 #menu2 {
     float: right;
     padding-top: 2.5em;
-    width: 63%;
+    width: 64%;
 }
 #menu2 ul {
     float: right;
